add: 完成 lab3 代码

--- a/lab3 客户端脚本编程/src/style.css
+++ b/lab3 客户端脚本编程/src/style.css
@@ -28,34 +28,142 @@ body {
 
 main {
 	display: flex;
-	margin: var(--md);
-	height: 500px;
-	gap: 20px;
+	/* margin: var(--md); */
+	box-sizing: border-box;
+	/* margin: 3%; */
+	padding: 2vh 2vw;
+	/* padding: 2%; */
+	/* height: 500px; */
+	height: 50vw;
+	width: 100%;
+	justify-content: space-between;
+	/* justify-content: space-evenly; */
 	/* flex-wrap: wrap; */
 	/* align-items: flex-start; */
 }
 
 main .main-video-container {
-	width: 70%;
+	width: 62vw;
 	height: 100%;
 	padding: var(--md);
 	border-radius: var(--xs);
 	background-color: #fff;
+	display: flex;
+	flex-direction: column;
 }
 
 main .main-video-container .main-video {
 	width: 100%;
 	height: 90%;
 	border-radius: var(--xs);
+	background-color: #444;
+}
+
+video::-webkit-media-controls {
+	display: none !important;
+}
+
+main .main-video-container .video-controls {
+	width: 100%;
+	/* width: 300px; */
+	height: var(--lg);
+	background-color: rgba(200, 200, 200, 0.5);
+	border-radius: var(--xs);
+	display: flex;
+	flex-direction: row;
+	gap: var(--xs);
+}
+
+main .main-video-container .video-controls button {
+	flex: 0 0 auto;
+	width: var(--lg);
+	height: 100%;
+	font-size: var(--md);
+	background-color: transparent;
+	border-style: none;
+	color: #444;
+}
+
+main .main-video-container .video-controls button:hover {
+	/* font-size: 1.2em; */
+	color: #000;
+}
+
+main .main-video-container .video-controls .progress-bar {
+	flex: 1 1 85%;
+	/* width: 85%; */
+	height: 100%;
+	/* color: lightblue; */
+}
+
+main .main-video-container .video-controls .volume {
+	width: var(--lg);
+	/* height: 88px; */
+	display: flex;
+	gap: 2px;
+	flex-direction: column-reverse;
+}
+
+main .main-video-container .video-controls .volume .volume-ctl {
+	display: none;
+	appearance: slider-vertical;
+	height: 56px;
+}
+
+main .main-video-container .video-controls .speed {
+	display: flex;
+	gap: var(--xs);
+	width: 48px;
+	height: 100%;
+	font-size: var(--sm);
+	flex-direction: column-reverse;
+}
+
+main .main-video-container .video-controls .speed-btn {
+	line-height: var(--lg);
+	font-size: var(--sm);
+	text-align: center;
+	border-radius: var(--xs);
+	border-width: var(--xs);
+	border-color: #444;
+	/* background-color: #444; */
+}
+
+main .main-video-container .video-controls .options {
+	display: none;
+	/* background-color: rgba(220, 220, 220, 0.9); */
+	background-color: rgba(0, 0, 0, 0.5);
+	border-radius: var(--xs);
+}
+main .main-video-container .video-controls .options .option-item {
+	margin: 2px;
+	/* background-color: rgba(230, 230, 230, 0.9); */
+	color: rgba(240, 240, 240, 0.5);
+	border-radius: 2px;
+	text-align: center;
+	font-family: sans-serif;
+}
+
+main .main-video-container .video-controls .options .option-item:hover {
+	background-color: rgba(0, 0, 0, 0.3);
+}
+
+main
+	.main-video-container
+	.video-controls
+	.volume
+	.volume-ctl::-webkit-slider-thumb {
+	background: #eee;
 }
 
 main .main-video-container .main-title {
+	margin: var(--sm);
 	font-size: var(--md);
 }
 
 main .video-list-container {
 	/* flex: 1 1 350px; */
-	width: 30%;
+	width: 32vw;
 	height: 100%;
 	border-radius: var(--xs);
 	overflow-y: scroll;
@@ -101,6 +209,87 @@ main .video-list-container::-webkit-scrollbar-track {
 main .video-list-container::-webkit-scrollbar-thumb {
 	background-color: #444;
 	border-radius: var(--xs);
+}
+
+.center-box {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+
+.info-container {
+	display: flex;
+	justify-content: space-between;
+	margin: 2vh 2vw;
+	height: 8vw;
+	border-radius: var(--xs);
+	background-color: #fff;
+}
+
+.info-container .description {
+	width: 25%;
+	/* height: 100%; */
+	text-align: center;
+	line-height: 100%;
+	font-size: var(--md);
+	border-width: 0 var(--xs) 0 0;
+	margin: var(--xs);
+	border-style: solid;
+	border-color: rgba(0, 0, 0, 0.5);
+}
+
+.info-container .profile-list {
+	width: 70%;
+	margin: 0 var(--sm) 0 var(--sm);
+	display: flex;
+	justify-content: space-between;
+}
+
+.info-container .profile-list .arrow .arrow-btn {
+	border-style: none;
+	background-color: rgba(255, 255, 255, 0);
+	color: #444;
+}
+
+.info-container .profile-list .arrow .arrow-btn:hover {
+	color: #000;
+}
+
+.info-container .profile-list .profile-container {
+	display: none;
+	/* height: 100%; */
+	aspect-ratio: 1/1;
+	margin: var(--xs);
+}
+
+.info-container .profile-list .profile-container:hover {
+	background-color: #eee;
+}
+
+.info-container .profile-list .profile-container.active {
+	display: inline-block;
+}
+
+.info-container .profile-list .profile-container .img-container {
+	/* box-sizing: content-box; */
+	margin: 5%;
+	text-align: center;
+	height: 50%;
+}
+
+.info-container .profile-list .profile-container .img-container img {
+	height: 100%;
+	border-radius: 50%;
+}
+
+.info-container .profile-list .profile-container .uid {
+	border-width: 5%;
+	text-align: center;
+	color: #444;
+}
+
+.info-container .profile-list .profile-container .uid:hover {
+	color: #000;
 }
 
 header {
