fix: 一些小细节的修改

--- a/lab3 客户端脚本编程/src/style.css
+++ b/lab3 客户端脚本编程/src/style.css
@@ -37,6 +37,7 @@ main {
 	height: 50vw;
 	width: 100%;
 	justify-content: space-between;
+	flex-wrap: wrap;
 	/* justify-content: space-evenly; */
 	/* flex-wrap: wrap; */
 	/* align-items: flex-start; */
